<resources>
    <string name="app_name">DigitSpeedView</string>
    <string name="app_name1">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">DOCUMENTS</string>
    <string name="msg_no_notes">Press the Plus button on bottom right corner to enter Document ID</string>
    <string name="lbl_new_note_title">Enter Document ID</string>
    <string name="lbl_edit_note_title">ENTER New Document ID</string>
    <string name="hint_enter_note">DRIVING LICENCE / INSURANCE</string>


    <string name="start_updates">START LOCATION UPDATES</string>
    <string name="stop_updates">STOP LOCATION UPDATES</string>
    <string name="get_last_location">GET LAST LOCATION</string>

    <string name="stat1">OG-18-1321-1806-00004312 \nFrom: 10-Oct-2017 00:01
\nTo: 09-Oct-2018 Midnight \n09-Oct-2017 \nMR KARTHIGEYAN S \nACCESS 125CC \nMBLHA10A6EHE53868 \nHA10ENEHE76425 \nPY 05 J 1699\nPY05 201900000458</string>
    <string name="stat2">Policy Number \nPeriod Of Insurance \n
\nPolicy issued on\nInsured Name  \nMAKE:  \nCHASSIS NO: \nENGINE NO:  \nREGISTRATION NO:\nLICENCE NO: </string>
    <string name="stat3">Policy Number \nPeriod Of Insurance \n
\nPolicy issued on\nInsured Name  \nMAKE:  \nCHASSIS NO: \nENGINE NO:  \nREGISTRATION NO:\nLICENCE NO: </string>

    <string name="stat4">2499Kms\n2499Kms\n83%\nON\n33/33\nON\nAUTO\n1100</string>
    <string name="stat5">ENGINE OIL INSPECTION\nBRAKE OIL INSPECTION\nBATTERY HEALTH\nLIGHTS\nAIR PRESSURE F/R\nABS\nMODE\nRPM/TORQUE</string>
    <string name="stat6">ENGINE OIL INSPECTION\nBRAKE OIL INSPECTION\nBATTERY HEALTH\nLIGHTS\nAIR PRESSURE F/R\nABS\nMODE\nRPM/TORQUE</string>
    <string name="stat7">*Service scheduled at 2499 Kms</string>


</resources>
