<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/vehicle_stat4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:padding="20dp"
        android:text="@string/stat5"
        android:textSize="@dimen/stat5"
        />
    <TextView
        android:id="@+id/vehicle_stat5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:padding="20dp"
        android:text="@string/stat6"
        android:textSize="@dimen/stat6"
        />

    <TextView
        android:id="@+id/vehicle_stat6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="340dp"
        android:text="@string/stat4"
        android:textSize="@dimen/stat4"/>
    <TextView
        android:id="@+id/vehicle_stat7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="295dp"
        android:layout_marginLeft="200dp"
        android:textColor="@color/stat7"
        android:text="@string/stat7"
        android:textSize="@dimen/stat7"/>

</RelativeLayout>